[package]
name = "sstb"
version = "0.1.0-alpha"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An experimental an educational attempt to write a Rust thread-safe sstables library."

[dependencies]
memmap = "^0.7"
bincode = "^1"
serde = {version = "^1", features = ["derive"]}
flate2 = "^1"
lru = "^0.4"
byteorder = "^1"
bytes = "^0.5.4"
snap = "^0.2"
nix = "^0.5"
parking_lot = "^0.10"
num_cpus = "^1"

[dev-dependencies]
criterion = "^0.3"
rand = {version = "^0.7", features=["small_rng"]}
crossbeam = "^0.7"
rayon = "^1.3"

[[bench]]
name = "sstable_implementations"
harness = false