[package]
name = "sstb"
version = "0.2.0-alpha"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
An experimental an educational attempt to write a Rust thread-safe sstables library.

This was created as a learning excercise, to learn Rust, get some fair share of low-level
programming, optimization, to learn how sstables work and how to make them faster.

Inside are some working implementations that pass the tests, are thread-safe and concurrent,
and even run smooth in benchmarks.

For more information and usage examples, [read the docs](https://docs.rs/sstb).
"""
documentation = "https://docs.rs/sstb"
homepage = "https://docs.rs/sstb"
repository = "https://github.com/ikatson/rust-sstb"

[dependencies]
memmap = "^0.7"
bincode = "^1"
serde = {version = "^1", features = ["derive"]}
flate2 = "^1"
lru = "^0.4"
byteorder = "^1"
bytes = "^0.5.4"
snap = "^0.2"
nix = "^0.5"
parking_lot = "^0.10"
num_cpus = "^1"
bloomfilter = "^1"

[dev-dependencies]
criterion = "^0.3"
rand = {version = "^0.7", features=["small_rng"]}
crossbeam = "^0.7"
rayon = "^1.3"

[[bench]]
name = "sstable_implementations"
harness = false